# pipeline

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  LICENSE  Makefile  README.md  api_function_testing.py  basic_maths.py  clusters.py  dev-version.sh  graph_dict.json  hf_model.py  hidden.env  load_model.py  ml_model.py  model_creation.py  new_pipeline.py  pyproject.toml  pyproject.toml.bak  req.txt  requirements.txt  setup.cfg  setup.py  setup.sh  test.json  testing.py  tlhlt.npy  upload_function.py
.github/: pull_request_template.md
.github/workflows/: prod-wf.yml  publish-docs.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  pull_request.yml
ML pipeline/: config.json
MathsIsFun/: config.json
documentation/: creating_pipelines.md  getting_started.md  pipeline_cloud_quickstart.md
examples/: api_pipeline_run.py  api_usage.py  async_run.py  basic_maths.py  create_env.py  custom_class.py  debugging_mode.py  example_parallel_run.py  file_uploading.py  function_uploading.py  hf_model.py  input_schemas.py  load_model.py  local_tensorflow_pipeline.py  ml_model.py  run.py  run_async.py  run_example.py  run_stream.py  stream.py  test.json  upload_example.py  upload_stream.py
examples/asyncio/: stable_diffusion_run.py
examples/audio/: musicgen.py
examples/basic/: pipeline.yaml
examples/basic_maths/: README.md  basic_maths.py
examples/custom_models/: decorator_testing.py  example_matrix.npy  example_weights.pt  fast_torch_loading.py  fast_torch_loading_benchmark.py  model_from_base_class.py  model_with_file.py  model_with_file_numpy.py  stable_diffusion.py
examples/debugging/: debugging_mode.py  debugging_pl.py  example.py  run_pipeline.py
examples/deployment_pipelines/: gpt_j_chatbot.py
examples/dicts/: run.py  upload.py
examples/docker/: README.md  basic_usage.py  gpt_neo_docker.py  hf_model.py  mistralvllm.py  my_pipeline.py  pipeline.dockerfile  pipeline.yaml  pipeline.yaml.vllm  ported_pipeline.py  stable_diffusion_2_0_docker.py
examples/environments/: custom_environment.py  custom_environment_session.py
examples/files/: file_returning copy.py  file_returning.py  image_file_returning.py  optional_files.py  remote_directory.py  remote_file.py  run.py  static_dir_upload.py  static_file_upload.py  upload_file.py  url_files.py
examples/huggingface/: CausalLM.py  MaskedLM.py  gpt-j-6b-upload.py  gpt-j-6b.py  gpt-neo-upload.py  gpt-neo.py  local_run_hugging_face_pipeline.py
examples/init_test/: new_pipeline.py  pipeline.dockerfile  pipeline.yaml
examples/interfaces/: interface_example.py
examples/large-file/: make_large_file.py  pipeline.yaml
examples/module_upload/: run_pipeline.py  upload_pipeline.py
examples/nlp/: e5_large-v2.py
examples/pipeline-examples-env/: pyproject.toml
examples/pipeline_cloud/: create_upload_run.py
examples/projects/: project_creation.py
examples/spacy/: cloud_run_spacy_wrapper.py  local_run_spacy_wrapper.py  spacy-tokenizer.py  spacy_pipeline_library.py
examples/speech/: seamless_communication.py  whipser-large.py
examples/tags/: function_tag.py
examples/translation/: new_pipeline.py  pipeline.yaml
examples/tutorials/: custom_class_variables.py  custom_ml_model.py  multi_variable_output.py  pipeline_files.py  streaming.py
examples/v3/: create_env.py  data.tmp  example_parallel_run.py  example_run.py  example_run_with_custom_env.py  example_upload.py  example_upload_and_run.py  run_async.py  run_example.py  run_stream.py  upload_example.py  upload_stream.py
examples/vision/: blip-2.py  blip.py  pokemon_sd.py  real-esrgan.py  sdxl-img2img.py  sdxl_v1_0.py  stable_diffusion15.py  stable_diffusion_v1-5.py  waifu_diffusion.py
first_pipeline/: 0  0.nf  1  1.nf  model.json
first_pipeline/0/: function_conf.json
first_pipeline/1/: function_conf.json
migrate_pipelines/: README.md  ported_pipeline.py  prepare_csvs.py  script.py
npu2/: __init__.py
npu2/api/: __init__.py  call.py  link.py  upload.py
npu2/exception/: PipelineFunctionArgsMismatch.py  __init__.py  (+1 more)
npu2_examples/: function_api.py
pipeline/: __init__.py  __main__.py  config.py  configuration.py  console.py  io.py  logging.py
pipeline_examples/: basic_maths.py  custom_class.py  hf_model.py  ml_model.py
tests/: conftest.py  test_api_environments.py  test_basic_maths.py  test_cli.py  test_docker.py  test_environments.py  test_function_schemas.py  test_input_field.py  test_model.py  test_pipeline_cloud.py  test_pipeline_cloud_asyncio.py  test_pipeline_function.py  test_pipeline_main.py  test_pipeline_schemas.py  test_schemas.py  test_serialization.py  test_utils.py
(+593 files in other folders)
