[tool.poetry]
name = "pipeline-ai"
version = "0.1.9"

description = "Pipelines for machine learning workloads."
authors = [
  "Paul Hetherington <ph@mystic.ai>",
  "Alex Pearwin <alex@mystic.ai>",
  "Maximiliano Schulkin <max@mystic.ai>",
  "Neil Wang <neil@mystic.ai>",
  "Ross Gray <ross@mystic.ai>",
]
packages = [{ include = "pipeline" }]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  'License :: OSI Approved :: Apache Software License',
  'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pydantic = "^1.8.2"
requests = "^2.26.0"
setuptools = "^65.4.1"
pyhumps = "^3.0.2"
requests-toolbelt = "^0.9.1"
tqdm = "^4.62.3"
PyYAML = { version = "^6.0", optional = true }
cloudpickle = "^2.1.0"
dill = "^0.3.4"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pydantic = "^1.8.2"
requests = "^2.26.0"
pyhumps = "^3.0.2"
pytest = "^6.2.5"
black = "^22.3.0"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
responses = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
exclude = '''
(
  /(
    \.mypy_cache
  )/
)
'''

[tool.isort]
profile = "black"

[tool.poetry.extras]
docker = ["PyYAML"]
