[tool.poetry]
name = "pipeline-ai"
version = "0.4.2"

description = "Pipelines for machine learning workloads."
authors = [
  "Paul Hetherington <ph@mystic.ai>",
  "Alex Pearwin <alex@mystic.ai>",
  "Neil Wang <neil@mystic.ai>",
  "Ross Gray <ross@mystic.ai>",
]
packages = [{ include = "pipeline" }]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  'License :: OSI Approved :: Apache Software License',
  'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
setuptools = "^65.4.1"
pyhumps = "^3.0.2"
tqdm = "^4.62.3"
PyYAML = { version = "^6.0", optional = true }
cloudpickle = "^2.2.0"
dill = "^0.3.6"
httpx = "^0.23.1"
tabulate = "^0.9.0"
packaging = ">=21.0"

[tool.poetry.dev-dependencies]
pydantic = "^1.8.2"
pyhumps = "^3.0.2"
pytest = "^6.2.5"
black = "^22.10.0"
pre-commit = "^2.16.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest-httpserver = "^1.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
exclude = '''
(
  /(
    \.mypy_cache
  )/
)
'''

[tool.isort]
profile = "black"

[tool.poetry.extras]
docker = ["PyYAML"]

[tool.poetry.scripts]
pipeline = "pipeline.console:_run"
