[tool.poetry]
name = "pipeline-ai"
version = "2.3.2"
description = "Pipelines for machine learning workloads."
authors = [
  "Paul Hetherington <ph@mystic.ai>",
  "Ross Gray <ross@mystic.ai>",
  "Yvan Buggy <yvan@mystic.ai>",
]
packages = [{ include = "pipeline" }]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  'License :: OSI Approved :: Apache Software License',
  'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.8.2"
pyhumps = "^3.8.0"
tqdm = "^4.66.1"
PyYAML = "^6.0"
cloudpickle = "^2.2.0"
httpx = "^0.26.0"
tabulate = "^0.9.0"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
websockets = ">=10.4"
docker = "^7.1.0"
fastapi = "^0.105.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"
pre-commit = "^3.6.0"
flake8 = "^6.1.0"
isort = "^5.13.2"
pytest-httpserver = "^1.0.8"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
boto3 = "^1.34.5"
loguru = "^0.7.2"
pytest-asyncio = "^0.23.5.post1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
exclude = '''
(
  /(
    \.mypy_cache
  )/
)
'''

[tool.isort]
profile = "black"

[tool.poetry.scripts]
pipeline = "pipeline.console:_run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
