[metadata]
name = pipeline-ai
version = 0.0.1
author = Paul Hetherington
author_email = paul@getneuro.ai
description = A simple way to constuct processing pipelines for AI/ML projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neuro-ai-dev/pipeline

classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = pipeline
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pipeline